bug 315933: Trailing /s in XML shouldn't be marked in error, since they're generally not. Truely invalid /s will get shown to be so by the real XML parser. r+sr=jst